# provisioning-agent

./: .env  .env.example  .gitignore  Dockerfile  Dockerfile.erpnext  README.md  docker-compose.dokploy.yml  docker-compose.yml  package-lock.json  package.json
deploy/: .gitignore
deploy/erp-side/: README.md
docs/: architecture.md  erp-execution-backend.md  erp-side-execution-interface.md  erp-side-runbook.md  erp-side-runtime.md
erp-utils/: package-lock.json  package.json  site-config.ts  tsconfig.json
provisioning_api/: DEPLOYMENT.md  MANIFEST.in  README.md  license.txt  pyproject.toml  setup.py
provisioning_api/provisioning_api/: access.py  api_user_email.py  api_user_service.py  api_username_validation.py  auth.py  hooks.py  request_site.py  site_db.py  site_validation.py
provisioning_api/provisioning_api/api/: __init__.py  provisioning.py
provisioning_api/provisioning_api/config/: __init__.py
provisioning_api/provisioning_api/utils/: __init__.py
provisioning_api/tests/: test_access.py  test_api_user_email.py  test_api_username_validation.py  test_provisioning_imports.py  test_provisioning_whitelist.py  test_request_site.py  test_site_db.py  test_site_validation.py
scripts/: check-env-keys.sh
src/: .gitignore  app.ts  server.ts
src/clients/: erp-execution-read-db-port.ts  erp-execution-service-client.test.ts  erp-execution-service-client.ts  site-steps-forwarder-port.ts  site-steps-forwarder.test.ts  site-steps-forwarder.ts
src/config/: docker-bench-defaults.ts  env.ts  host-bench-runtime.test.ts  host-bench-runtime.ts
src/lib/: auth.ts  (+7 more)
(+33 files in other folders)
