[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "provisioning_api"
version = "0.1.0"
description = "Internal provisioning API for ERP-side operations (Frappe app)"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = []

[tool.setuptools]
include-package-data = true
zip-safe = false

[tool.setuptools.packages.find]
where = ["."]
include = ["provisioning_api*"]
